[package]
name = "amo_labs"
version = "0.1.1"
authors = ["Udovychenko Roman"]
edition = "2021"


[dependencies]
egui = "0.22"
eframe = { version = "0.22", default-features = false, features = [
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }
log = "0.4"
serde = { version = "1", features = ["derive"] }
toml = "0.7"


# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.10"
arboard = "3.2"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"


[profile.release]
opt-level = 3
strip = true
lto = true

[profile.dev]
opt-level = 1
